k8s-resource/ingress/canary/canary-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: can-nginx
  name: can-nginx
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: can-nginx
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: can-nginx
  name: can-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: can-nginx
  template:
    metadata:
      labels:
        run: can-nginx
    spec:
      containers:
      - image: nginx:1.8.1
        imagePullPolicy: IfNotPresent
        name: can-nginx
        ports:
        - containerPort: 80
          protocol: TCP
